--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,12 @@
         "moduleResolution": "node",
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
+        "typeRoots": [
+            "node_modules/@types"
+        ],
         "lib": [
-            "es2017"
+            "es2017",
+            "dom"
         ]
     }
 }
