--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/mocha": "^5.1.0",
     "@types/node": "^9.6.5",
     "chai": "^4.1.2",
+    "console.table": "^0.10.0",
     "html-webpack-plugin": "^3.2.0",
     "mocha": "^5.1.1",
     "request": "^2.85.0",
