--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
-            "program": "${workspaceFolder}\\dist\\out-tsc\\demo\\test.js",
+            "program": "${workspaceFolder}\\dist\\demo\\test.js",
             "outFiles": [
                 "${workspaceFolder}/**/*.js"
             ]
