--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "typedoc": "^0.11.1",
     "typescript": "^2.8.1",
     "webpack": "^4.6.0"
+  },
+  "dependencies": {
+    "tslib": "^1.9.0"
   }
 }
