Update new library design - Add fromsync methods - Update document - Update example - Update index.ts to export all api

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,10 +5,10 @@
         "sourceMap": true,
         "outDir": "./dist",
         "moduleResolution": "node",
-        "module": "amd",
+        // "module": "amd",
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
-        "outFile": "dist/eslinq.js",
+        // "outFile": "dist/eslinq.js",
         "typeRoots": [
             "node_modules/@types"
         ],
@@ -16,8 +16,5 @@
             "es2017",
             "dom"
         ]
-    },
-    "files": [
-        "./src/index.ts"
-    ]
+    }
 }
