--- a/package.json
+++ b/package.json
@@ -1,36 +1,40 @@
 {
-  "name": "eslinq",
+  "name": "linq-fns",
   "version": "1.0.0",
   "description": "LINQ for Javascript, written by TypeScript",
   "main": "index.js",
   "scripts": {
     "test": "mocha -r ts-node/register test/*.ts",
-    "demo": "tsc --sourceMap demo/typescript/index.ts"
+    "demo": "tsc --sourceMap demo/typescript/index.ts",
+    "clean": "gulp clean",
+    "browser": "webpack -p && gulp rl"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jinhduong/eslinq.git"
+    "url": "git+https://github.com/jinhduong/linq-fns.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/jinhduong/eslinq/issues"
+    "url": "https://github.com/jinhduong/linq-fns/issues"
   },
-  "homepage": "https://github.com/jinhduong/eslinq#readme",
+  "homepage": "https://github.com/jinhduong/linq-fns#readme",
   "devDependencies": {
     "@types/chai": "^4.1.2",
     "@types/mocha": "^5.1.0",
     "@types/node": "^9.6.5",
     "chai": "^4.1.2",
     "console.table": "^0.10.0",
+    "del": "^3.0.0",
+    "gulp": "^3.9.1",
     "html-webpack-plugin": "^3.2.0",
     "mocha": "^5.1.1",
-    "request": "^2.85.0",
     "ts-node": "^6.0.0",
     "typedoc": "^0.11.1",
     "typescript": "^2.8.1",
-    "webpack": "^4.6.0"
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.0.15"
   },
   "dependencies": {
     "tslib": "^1.9.0"
